try background-size: auto to solve bg flickering issue

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,12 +4,13 @@
 	background-size: cover;
 	display: grid;
 	grid-template-rows: 120px 1fr;
-	min-height: 100%;
+	min-height: 100vh;
 	transition: all 0.5s ease-in-out;
 }
 
 @media screen and (max-width: 760px) {
 	.App {
+		background-size: auto;
 		grid-template-rows: 90px 1fr;
 	}
 }
